# fleks_os

./: .gitignore  .nvim-dap.lua  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ]  cmake_install.cmake  main  main.c  main.cpp
includes/: bitmap.h  block_group.h  bm.h  cat.h  chmod.h  clear.h  command.h  console.h  cp.h  dentry.h  executor.h  exit.h  fs.h  info.h  inode.h  ls.h  mkfile.h  os_status.h  rename.h  rm.h  sha256.h  shadow.h  shared.h  superblock.h  useradd.h  users.h  vedit.hpp  write.h
src/: bitmap.cpp  bm.cpp  cat.cpp  chmod.cpp  clear.cpp  console.cpp  cp.cpp  executor.cpp  exit.cpp  fs.cpp  info.cpp  ls.cpp  mkfile.cpp  rename.cpp  rm.cpp  sha256.cpp  useradd.cpp  users.cpp  utils.hpp  vedit.cpp  write.cpp
